k8s/overlays/prod/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: policy-api
  namespace: aster-policy
spec:
  replicas: 3
  template:
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - policy-api
              topologyKey: kubernetes.io/hostname
      containers:
        - name: policy-api
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
            limits:
              memory: "1Gi"
              cpu: "1500m"
